--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -6474,17 +6474,17 @@ msgstr "Ein Konto wurde für Sie erstellt"
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
 
-#~ msgid "Unique Visitors in the Last Month"
-#~ msgstr "Einzigartige Besucher im letzten Monat"
+msgid "Unique Visitors in the Last Month"
+msgstr "Einzigartige Besucher im letzten Monat"
 
-#~ msgid "Total Visits in the Last Month"
-#~ msgstr "Gesamtbesuche im letzten Monat"
+msgid "Total Visits in the Last Month"
+msgstr "Gesamtbesuche im letzten Monat"
 
-#~ msgid "Total Page Views in the Last Month"
-#~ msgstr "Gesamtseitenaufrufe im letzten Monat"
+msgid "Total Page Views in the Last Month"
+msgstr "Gesamtseitenaufrufe im letzten Monat"
 
-#~ msgid "Number of Page Views per Visit"
-#~ msgstr "Anzahl der Seitenaufrufe pro Besuch"
+msgid "Number of Page Views per Visit"
+msgstr "Anzahl der Seitenaufrufe pro Besuch"
 
-#~ msgid "Average Visit Duration in Minutes"
-#~ msgstr "Durchschnittliche Besuchsdauer in Minuten"
+msgid "Average Visit Duration in Minutes"
+msgstr "Durchschnittliche Besuchsdauer in Minuten"
