--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -6500,20 +6500,20 @@ msgstr "Un compte a été créé pour vous"
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
 
-#~ msgid "Unique Visitors in the Last Month"
-#~ msgstr "Visiteurs uniques le mois dernier"
+msgid "Unique Visitors in the Last Month"
+msgstr "Visiteurs uniques le mois dernier"
 
-#~ msgid "Total Visits in the Last Month"
-#~ msgstr "Total des visites le mois dernier"
+msgid "Total Visits in the Last Month"
+msgstr "Total des visites le mois dernier"
 
-#~ msgid "Total Page Views in the Last Month"
-#~ msgstr "Total des pages vues le mois dernier"
+msgid "Total Page Views in the Last Month"
+msgstr "Total des pages vues le mois dernier"
 
-#~ msgid "Number of Page Views per Visit"
-#~ msgstr "Nombre de pages vues par visite"
+msgid "Number of Page Views per Visit"
+msgstr "Nombre de pages vues par visite"
 
-#~ msgid "Average Visit Duration in Minutes"
-#~ msgstr "Durée moyenne de la visite en minutes"
+msgid "Average Visit Duration in Minutes"
+msgstr "Durée moyenne de la visite en minutes"
 
-#~ msgid "Terminaux ID"
-#~ msgstr "ID du terminal"
+msgid "Terminaux ID"
+msgstr "ID du terminal"
