--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-02-17 14:11+0100\n"
+"POT-Creation-Date: 2025-03-03 17:44+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -663,6 +663,9 @@ msgstr "Totalbetrag"
 
 msgid "Chat History"
 msgstr "Chat-Verlauf"
+
+msgid "Item(s)"
+msgstr "Stück(e)"
 
 msgid "Change request"
 msgstr "Änderungsvorschlag"
@@ -1705,8 +1708,20 @@ msgstr ""
 msgid "Drop files to verify them"
 msgstr "Dateien zur Prüfung hierhin ziehen"
 
+msgid "Sent Notifications"
+msgstr "Gesendete Benachrichtigungen"
+
+msgid "Sent At"
+msgstr "Gesendet am"
+
+msgid "No notifications"
+msgstr "Keine Benachrichtigungen"
+
 msgid "No subscribers yet"
 msgstr "Noch keine Abonnenten"
+
+msgid "Subscribed on"
+msgstr "Abonniert am"
 
 msgid ""
 "This recipient has delivery failures, including hard bounces, invalid email "
