--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-02-17 14:11+0100\n"
+"POT-Creation-Date: 2025-03-03 17:44+0100\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -663,6 +663,9 @@ msgstr "Montant total"
 
 msgid "Chat History"
 msgstr "Historique du chat"
+
+msgid "Item(s)"
+msgstr "Article(s)"
 
 msgid "Change request"
 msgstr "Demande de modification"
@@ -1704,8 +1707,20 @@ msgstr ""
 msgid "Drop files to verify them"
 msgstr "Déposez les fichiers pour les vérifier"
 
+msgid "Sent Notifications"
+msgstr "Notifications envoyées"
+
+msgid "Sent At"
+msgstr "Envoyé à"
+
+msgid "No notifications"
+msgstr "Pas de notifications"
+
 msgid "No subscribers yet"
 msgstr "Pas encore d'abonnés"
+
+msgid "Subscribed on"
+msgstr "Abonné le"
 
 msgid ""
 "This recipient has delivery failures, including hard bounces, invalid email "
