--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-02-17 14:11+0100\n"
+"POT-Creation-Date: 2025-03-03 17:44+0100\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -660,6 +660,9 @@ msgstr "Importo totale"
 
 msgid "Chat History"
 msgstr "Storia della chat"
+
+msgid "Item(s)"
+msgstr "Elemento(i)"
 
 msgid "Change request"
 msgstr "Richiesta di modifica"
@@ -1699,8 +1702,20 @@ msgstr ""
 msgid "Drop files to verify them"
 msgstr "Rilascia i file per verificarli"
 
+msgid "Sent Notifications"
+msgstr "Notifiche inviate"
+
+msgid "Sent At"
+msgstr "Inviato a"
+
+msgid "No notifications"
+msgstr "Nessuna notifica"
+
 msgid "No subscribers yet"
 msgstr "Non ci sono ancora abbonati"
+
+msgid "Subscribed on"
+msgstr "Iscritto il"
 
 msgid ""
 "This recipient has delivery failures, including hard bounces, invalid email "
