--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-11-14 01:27+0100\n"
+"POT-Creation-Date: 2025-03-04 01:32+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -329,12 +329,6 @@ msgstr "Legislatur löschen"
 msgid "Parliamentarians"
 msgstr "Parlamentarier:innen"
 
-msgid "Export"
-msgstr "Export"
-
-msgid "Export All (xlsx)"
-msgstr "Alle exportieren (xlsx)"
-
 msgid "Role (as a party or group member)"
 msgstr "Rolle (als Partei- oder Fraktionsmitglied)"
 
@@ -343,6 +337,9 @@ msgstr "Möchten Sie diese:n Parlamentarier:in wirklich löschen?"
 
 msgid "Delete parliamentarian"
 msgstr "Parlamentarier:in löschen"
+
+msgid "Export"
+msgstr "Export"
 
 msgid "CSV billing export"
 msgstr "Abrechnungsexport (CSV)"
@@ -573,8 +570,14 @@ msgstr "Kommissionsitzung hinzugefügt"
 msgid "New commission meeting"
 msgstr "Neue Kommissionsitzung"
 
+msgid "Data Import (JSON)"
+msgstr "Import (JSON)"
+
 msgid "Dashboard"
 msgstr "Startseite"
+
+msgid "Import"
+msgstr "Import"
 
 msgid "Added a new legislative period"
 msgstr "Legislatur hinzugefügt"
@@ -606,9 +609,6 @@ msgstr "Neue Sätze hinzugefügt"
 msgid "New rate set"
 msgstr "Neue Sätze"
 
-msgid "Usermanagement"
-msgstr "Benutzerverwaltung"
-
 msgid "Added a new settlement run"
 msgstr "Neuer Abrechnungslauf hinzugefügt"
 
@@ -632,6 +632,12 @@ msgstr "Abrechnungen nach Parlamentarier:in"
 
 msgid "Total all parties"
 msgstr "Total Alle Parteien"
+
+#~ msgid "Export All (xlsx)"
+#~ msgstr "Alle exportieren (xlsx)"
+
+#~ msgid "Usermanagement"
+#~ msgstr "Benutzerverwaltung"
 
 #~ msgid "Date from"
 #~ msgstr "Datum von"
