--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -53,8 +53,8 @@ msgstr "Zeit von Bearbeitung bis Schliessung in Tagen im letzten Monat"
 msgid "Access"
 msgstr "Zugriff"
 
-msgid "Last Edited Pages"
-msgstr "Zuletzt bearbeitete Seiten"
+msgid "Last Edited Topics"
+msgstr "Zuletzt bearbeitete Themen"
 
 msgid "Last Edited News"
 msgstr "Zuletzt bearbeitete News"
