Form: Add new format to formcode
New possible format for animal identification number (15 digits)

TYPE: Feature
LINK: OGC-2052

--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -140,6 +140,9 @@ msgstr "UID Nummer"
 msgid "Swiss vat number"
 msgstr "MWST Nummer"
 
+msgid "Animal identification number (Microchip-Nr.)"
+msgstr "Tieridentifikationsnummer (Mikrochip-Nr.)"
+
 msgid "Password"
 msgstr "Passwort"
 
