--- a/src/onegov/form/locale/rm_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/rm_CH/LC_MESSAGES/onegov.form.po
@@ -135,6 +135,9 @@ msgstr ""
 msgid "Swiss vat number"
 msgstr ""
 
+msgid "Animal identification number (Microchip-Nr.)"
+msgstr ""
+
 msgid "Password"
 msgstr ""
 
