--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-03-03 17:44+0100\n"
+"POT-Creation-Date: 2025-03-07 17:00+0100\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1710,8 +1710,14 @@ msgstr "Déposez les fichiers pour les vérifier"
 msgid "Sent Notifications"
 msgstr "Notifications envoyées"
 
+msgid "News"
+msgstr "Nouvelles"
+
 msgid "Sent At"
 msgstr "Envoyé à"
+
+msgid "Firebase Response Data"
+msgstr "Firebase Response Data"
 
 msgid "No notifications"
 msgstr "Pas de notifications"
@@ -2223,6 +2229,9 @@ msgid ""
 msgstr ""
 "Procédez avec prudence. Les billets et les données qu'ils contiennent "
 "peuvent être irrévocablement supprimés."
+
+msgid "Push Notification Overview"
+msgstr "Vue d'ensemble des notifications push"
 
 msgid "New Note"
 msgstr "Nouveau commentaire"
