--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-03-03 17:44+0100\n"
+"POT-Creation-Date: 2025-03-07 17:00+0100\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1705,8 +1705,14 @@ msgstr "Rilascia i file per verificarli"
 msgid "Sent Notifications"
 msgstr "Notifiche inviate"
 
+msgid "News"
+msgstr "Notizie"
+
 msgid "Sent At"
 msgstr "Inviato a"
+
+msgid "Firebase Response Data"
+msgstr "Firebase Response Data"
 
 msgid "No notifications"
 msgstr "Nessuna notifica"
@@ -2220,6 +2226,9 @@ msgid ""
 msgstr ""
 "Procedere con cautela. I biglietti e i dati in essi contenuti possono essere "
 "irrevocabilmente cancellati."
+
+msgid "Push Notification Overview"
+msgstr "Panoramica delle notifiche push"
 
 msgid "New Note"
 msgstr "Nuova nota"
