--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2150,6 +2150,9 @@ msgstr ""
 msgid "E-Mail Address"
 msgstr "Adresse e-mail"
 
+msgid "The subscriber has given consent to receive the newsletter."
+msgstr "L'abonné a donné son consentement pour recevoir la newsletter."
+
 msgid ""
 "Select newsletter categories your are interested in. You will receive the "
 "newsletter if it reports on at least one of the subscribed categories."
@@ -2157,6 +2160,12 @@ msgstr ""
 "Sélectionnez les catégories de lettres d'information qui vous intéressent. "
 "Vous recevrez la newsletter si elle traite d'au moins une des catégories "
 "souscrites."
+
+msgid "E-Mail Address"
+msgstr "Adresse e-mail"
+
+msgid "The subscriber has given consent to receive the newsletter."
+msgstr "L'abonné a donné son consentement pour recevoir la newsletter."
 
 msgid "Submission Window"
 msgstr "Fenêtre de soumission"
