--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-05 11:08+0100\n"
+"POT-Creation-Date: 2025-03-10 13:54+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -61,6 +61,21 @@ msgstr "Zuletzt bearbeitete News"
 
 msgid "Web Statistics"
 msgstr "Web-Statistik"
+
+msgid "Unique Visitors in the Last Month"
+msgstr "Einzigartige Besucher im letzten Monat"
+
+msgid "Total Visits in the Last Month"
+msgstr "Gesamtbesuche im letzten Monat"
+
+msgid "Total Page Views in the Last Month"
+msgstr "Gesamtseitenaufrufe im letzten Monat"
+
+msgid "Number of Page Views per Visit"
+msgstr "Anzahl der Seitenaufrufe pro Besuch"
+
+msgid "Average Visit Duration in Minutes"
+msgstr "Durchschnittliche Besuchsdauer in Minuten"
 
 msgid "No data available"
 msgstr "Keine Daten verfügbar"
@@ -2247,14 +2262,6 @@ msgstr "Aktivierungs-Email mit Anmelde-Anleitung senden"
 msgid "A user with this e-mail address exists already"
 msgstr "Ein Benutzer mit dieser E-Mail Adresse existiert bereits"
 
-msgid ""
-"Users can only be in one group. If they already belong to another group and "
-"get added here, they will automatically get removed from the other group."
-msgstr ""
-"Benutzer können nur in einer Gruppe sein. Wenn sie bereits einer anderen "
-"Gruppe angehören und hier hinzugefügt werden, werden sie automatisch aus der "
-"anderen Gruppe entfernt."
-
 msgid "Ticket permissions"
 msgstr "Ticketberechtigungen"
 
@@ -3261,14 +3268,14 @@ msgstr "Möchten Sie wirklich das iFrame \"${title}\" löschen?"
 msgid "Copy"
 msgstr "Kopieren"
 
-msgid "Paste"
-msgstr "Einfügen"
+msgid "A News cannot be pasted as Topic"
+msgstr "Eine Nachricht kann nicht als Thema eingefügt werden"
 
 msgid "A Topic cannot be pasted as News"
 msgstr "Ein Thema kann nicht als News eingefügt werden"
 
-msgid "A News cannot be pasted as Topic"
-msgstr "Eine Nachricht kann nicht als Thema eingefügt werden"
+msgid "Paste"
+msgstr "Einfügen"
 
 msgid "Please note that this page has subpages which will also be deleted!"
 msgstr ""
@@ -6479,17 +6486,11 @@ msgstr "Ein Konto wurde für Sie erstellt"
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
 
-#~ msgid "Unique Visitors in the Last Month"
-#~ msgstr "Einzigartige Besucher im letzten Monat"
-
-#~ msgid "Total Visits in the Last Month"
-#~ msgstr "Gesamtbesuche im letzten Monat"
-
-#~ msgid "Total Page Views in the Last Month"
-#~ msgstr "Gesamtseitenaufrufe im letzten Monat"
-
-#~ msgid "Number of Page Views per Visit"
-#~ msgstr "Anzahl der Seitenaufrufe pro Besuch"
-
-#~ msgid "Average Visit Duration in Minutes"
-#~ msgstr "Durchschnittliche Besuchsdauer in Minuten"
+#~ msgid ""
+#~ "Users can only be in one group. If they already belong to another group "
+#~ "and get added here, they will automatically get removed from the other "
+#~ "group."
+#~ msgstr ""
+#~ "Benutzer können nur in einer Gruppe sein. Wenn sie bereits einer anderen "
+#~ "Gruppe angehören und hier hinzugefügt werden, werden sie automatisch aus "
+#~ "der anderen Gruppe entfernt."
