--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-03-05 11:08+0100\n"
+"POT-Creation-Date: 2025-03-10 13:54+0100\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -62,6 +62,21 @@ msgstr "Notizie modificate di recente"
 
 msgid "Web Statistics"
 msgstr "Statistiche Web"
+
+msgid "Unique Visitors in the Last Month"
+msgstr "Visitatori unici nell'ultimo mese"
+
+msgid "Total Visits in the Last Month"
+msgstr "Visite totali nell'ultimo mese"
+
+msgid "Total Page Views in the Last Month"
+msgstr "Visualizzazioni totali di pagine nell'ultimo mese"
+
+msgid "Number of Page Views per Visit"
+msgstr "Numero di visualizzazioni di pagine per visita"
+
+msgid "Average Visit Duration in Minutes"
+msgstr "Durata media della visita in minuti"
 
 msgid "No data available"
 msgstr "Nessun dato disponibile"
@@ -2260,14 +2275,6 @@ msgstr "Invia e-mail di attivazione con le istruzioni"
 msgid "A user with this e-mail address exists already"
 msgstr "Esiste già un utente con questo indirizzo e-mail"
 
-msgid ""
-"Users can only be in one group. If they already belong to another group and "
-"get added here, they will automatically get removed from the other group."
-msgstr ""
-"Gli utenti possono essere solo in un gruppo. Se appartengono già ad un altro "
-"gruppo e vengono aggiunti qui, verranno automaticamente rimossi dall'altro "
-"gruppo. "
-
 msgid "Ticket permissions"
 msgstr "Permessi sul biglietto"
 
@@ -3267,14 +3274,14 @@ msgstr "Si vuole davvero eliminare l'iFrame \"${title}\"?"
 msgid "Copy"
 msgstr "Copia"
 
-msgid "Paste"
-msgstr "Incolla"
+msgid "A News cannot be pasted as Topic"
+msgstr "Una notizia non può essere incollata come argomento"
 
 msgid "A Topic cannot be pasted as News"
 msgstr "Un argomento non può essere incollato come notizia"
 
-msgid "A News cannot be pasted as Topic"
-msgstr "Una notizia non può essere incollata come argomento"
+msgid "Paste"
+msgstr "Incolla"
 
 msgid "Please note that this page has subpages which will also be deleted!"
 msgstr ""
@@ -6483,17 +6490,11 @@ msgstr "È stato creato un account per te"
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
 
-#~ msgid "Unique Visitors in the Last Month"
-#~ msgstr "Visitatori unici nell'ultimo mese"
-
-#~ msgid "Total Visits in the Last Month"
-#~ msgstr "Visite totali nell'ultimo mese"
-
-#~ msgid "Total Page Views in the Last Month"
-#~ msgstr "Visualizzazioni totali di pagine nell'ultimo mese"
-
-#~ msgid "Number of Page Views per Visit"
-#~ msgstr "Numero di visualizzazioni di pagine per visita"
-
-#~ msgid "Average Visit Duration in Minutes"
-#~ msgstr "Durata media della visita in minuti"
+#~ msgid ""
+#~ "Users can only be in one group. If they already belong to another group "
+#~ "and get added here, they will automatically get removed from the other "
+#~ "group."
+#~ msgstr ""
+#~ "Gli utenti possono essere solo in un gruppo. Se appartengono già ad un "
+#~ "altro gruppo e vengono aggiunti qui, verranno automaticamente rimossi "
+#~ "dall'altro gruppo. "
