Fixes translations and broken test

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -6482,29 +6482,20 @@ msgstr "Un compte a été créé pour vous"
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
 
-#~ msgid ""
-#~ "Users can only be in one group. If they already belong to another group "
-#~ "and get added here, they will automatically get removed from the other "
-#~ "group."
-#~ msgstr ""
-#~ "Les utilisateurs ne peuvent faire partie que d'un seul groupe. S'ils "
-#~ "appartiennent déjà à un autre groupe et sont ajoutés ici, ils seront "
-#~ "automatiquement retirés de l'autre groupe. "
+msgid "Unique Visitors in the Last Month"
+msgstr "Visiteurs uniques le mois dernier"
 
-#~ msgid "Unique Visitors in the Last Month"
-#~ msgstr "Visiteurs uniques le mois dernier"
+msgid "Total Visits in the Last Month"
+msgstr "Total des visites le mois dernier"
 
-#~ msgid "Total Visits in the Last Month"
-#~ msgstr "Total des visites le mois dernier"
+msgid "Total Page Views in the Last Month"
+msgstr "Total des pages vues le mois dernier"
 
-#~ msgid "Total Page Views in the Last Month"
-#~ msgstr "Total des pages vues le mois dernier"
+msgid "Number of Page Views per Visit"
+msgstr "Nombre de pages vues par visite"
 
-#~ msgid "Number of Page Views per Visit"
-#~ msgstr "Nombre de pages vues par visite"
+msgid "Average Visit Duration in Minutes"
+msgstr "Durée moyenne de la visite en minutes"
 
-#~ msgid "Average Visit Duration in Minutes"
-#~ msgstr "Durée moyenne de la visite en minutes"
-
-#~ msgid "Terminaux ID"
-#~ msgstr "ID du terminal"
+msgid "Terminaux ID"
+msgstr "ID du terminal"
