--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -6462,26 +6462,17 @@ msgstr "Ein Konto wurde für Sie erstellt"
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
 
-#~ msgid ""
-#~ "Users can only be in one group. If they already belong to another group "
-#~ "and get added here, they will automatically get removed from the other "
-#~ "group."
-#~ msgstr ""
-#~ "Benutzer können nur in einer Gruppe sein. Wenn sie bereits einer anderen "
-#~ "Gruppe angehören und hier hinzugefügt werden, werden sie automatisch aus "
-#~ "der anderen Gruppe entfernt."
+msgid "Unique Visitors in the Last Month"
+msgstr "Einzigartige Besucher im letzten Monat"
 
-#~ msgid "Unique Visitors in the Last Month"
-#~ msgstr "Einzigartige Besucher im letzten Monat"
+msgid "Total Visits in the Last Month"
+msgstr "Gesamtbesuche im letzten Monat"
 
-#~ msgid "Total Visits in the Last Month"
-#~ msgstr "Gesamtbesuche im letzten Monat"
+msgid "Total Page Views in the Last Month"
+msgstr "Gesamtseitenaufrufe im letzten Monat"
 
-#~ msgid "Total Page Views in the Last Month"
-#~ msgstr "Gesamtseitenaufrufe im letzten Monat"
+msgid "Number of Page Views per Visit"
+msgstr "Anzahl der Seitenaufrufe pro Besuch"
 
-#~ msgid "Number of Page Views per Visit"
-#~ msgstr "Anzahl der Seitenaufrufe pro Besuch"
-
-#~ msgid "Average Visit Duration in Minutes"
-#~ msgstr "Durchschnittliche Besuchsdauer in Minuten"
+msgid "Average Visit Duration in Minutes"
+msgstr "Durchschnittliche Besuchsdauer in Minuten"
