--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-11 08:43+0100\n"
+"POT-Creation-Date: 2025-03-11 16:04+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -61,6 +61,21 @@ msgstr "Zuletzt bearbeitete News"
 
 msgid "Web Statistics"
 msgstr "Web-Statistik"
+
+msgid "Unique Visitors in the Last Month"
+msgstr "Einzigartige Besucher im letzten Monat"
+
+msgid "Total Visits in the Last Month"
+msgstr "Gesamtbesuche im letzten Monat"
+
+msgid "Total Page Views in the Last Month"
+msgstr "Gesamtseitenaufrufe im letzten Monat"
+
+msgid "Number of Page Views per Visit"
+msgstr "Anzahl der Seitenaufrufe pro Besuch"
+
+msgid "Average Visit Duration in Minutes"
+msgstr "Durchschnittliche Besuchsdauer in Minuten"
 
 msgid "No data available"
 msgstr "Keine Daten verfügbar"
@@ -2133,12 +2148,6 @@ msgstr "Ungültiges JSON-Format in den Firebase- Zugangsdaten"
 msgid "Error validating Firebase credentials: {0}"
 msgstr "Fehler bei der Überprüfung der Firebase- Zugangsdaten: {0}"
 
-msgid "E-Mail Address"
-msgstr "E-Mail Adresse"
-
-msgid "The subscriber has given consent to receive the newsletter."
-msgstr "Der Abonnent hat der Zustellung des Newsletters zugestimmt."
-
 msgid ""
 "Select newsletter categories your are interested in. You will receive the "
 "newsletter if it reports on at least one of the subscribed categories."
@@ -3259,14 +3268,14 @@ msgstr "Möchten Sie wirklich das iFrame \"${title}\" löschen?"
 msgid "Copy"
 msgstr "Kopieren"
 
-msgid "Paste"
-msgstr "Einfügen"
+msgid "A News cannot be pasted as Topic"
+msgstr "Eine Nachricht kann nicht als Thema eingefügt werden"
 
 msgid "A Topic cannot be pasted as News"
 msgstr "Ein Thema kann nicht als News eingefügt werden"
 
-msgid "A News cannot be pasted as Topic"
-msgstr "Eine Nachricht kann nicht als Thema eingefügt werden"
+msgid "Paste"
+msgstr "Einfügen"
 
 msgid "Please note that this page has subpages which will also be deleted!"
 msgstr ""
@@ -3851,6 +3860,12 @@ msgstr "Umbenennen"
 
 msgid "Download"
 msgstr "Herunterladen"
+
+msgid "Linked Pages"
+msgstr "Verlinkungen"
+
+msgid "Links to ${filename}"
+msgstr "Links auf ${filename}"
 
 msgid "Digital seal applied by ${signee} on ${date}"
 msgstr "Digitales Siegel angewendet von ${signee} am ${date}"
@@ -6476,18 +6491,3 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
-
-msgid "Unique Visitors in the Last Month"
-msgstr "Einzigartige Besucher im letzten Monat"
-
-msgid "Total Visits in the Last Month"
-msgstr "Gesamtbesuche im letzten Monat"
-
-msgid "Total Page Views in the Last Month"
-msgstr "Gesamtseitenaufrufe im letzten Monat"
-
-msgid "Number of Page Views per Visit"
-msgstr "Anzahl der Seitenaufrufe pro Besuch"
-
-msgid "Average Visit Duration in Minutes"
-msgstr "Durchschnittliche Besuchsdauer in Minuten"
