--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-03-11 08:43+0100\n"
+"POT-Creation-Date: 2025-03-11 16:04+0100\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -62,6 +62,21 @@ msgstr "Notizie modificate di recente"
 
 msgid "Web Statistics"
 msgstr "Statistiche Web"
+
+msgid "Unique Visitors in the Last Month"
+msgstr "Visitatori unici nell'ultimo mese"
+
+msgid "Total Visits in the Last Month"
+msgstr "Visite totali nell'ultimo mese"
+
+msgid "Total Page Views in the Last Month"
+msgstr "Visualizzazioni totali di pagine nell'ultimo mese"
+
+msgid "Number of Page Views per Visit"
+msgstr "Numero di visualizzazioni di pagine per visita"
+
+msgid "Average Visit Duration in Minutes"
+msgstr "Durata media della visita in minuti"
 
 msgid "No data available"
 msgstr "Nessun dato disponibile"
@@ -2146,12 +2161,6 @@ msgstr "Formato JSON non valido nelle credenziali Firebase"
 msgid "Error validating Firebase credentials: {0}"
 msgstr "Errore durante la convalida delle credenziali Firebase: {0}"
 
-msgid "E-Mail Address"
-msgstr "Indirizzo e-mail"
-
-msgid "The subscriber has given consent to receive the newsletter."
-msgstr "Il sottoscrittore ha dato il consenso a ricevere la newsletter."
-
 msgid ""
 "Select newsletter categories your are interested in. You will receive the "
 "newsletter if it reports on at least one of the subscribed categories."
@@ -3265,14 +3274,14 @@ msgstr "Si vuole davvero eliminare l'iFrame \"${title}\"?"
 msgid "Copy"
 msgstr "Copia"
 
-msgid "Paste"
-msgstr "Incolla"
+msgid "A News cannot be pasted as Topic"
+msgstr "Una notizia non può essere incollata come argomento"
 
 msgid "A Topic cannot be pasted as News"
 msgstr "Un argomento non può essere incollato come notizia"
 
-msgid "A News cannot be pasted as Topic"
-msgstr "Una notizia non può essere incollata come argomento"
+msgid "Paste"
+msgstr "Incolla"
 
 msgid "Please note that this page has subpages which will also be deleted!"
 msgstr ""
@@ -3853,6 +3862,12 @@ msgstr "Rinomina"
 
 msgid "Download"
 msgstr "Scaricare"
+
+msgid "Linked Pages"
+msgstr "Collegamenti"
+
+msgid "Links to ${filename}"
+msgstr "Collegamenti a ${filename}"
 
 msgid "Digital seal applied by ${signee} on ${date}"
 msgstr "Sigillo digitale applicato da ${signee} il ${date}"
@@ -6480,18 +6495,3 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
-
-msgid "Unique Visitors in the Last Month"
-msgstr "Visitatori unici nell'ultimo mese"
-
-msgid "Total Visits in the Last Month"
-msgstr "Visite totali nell'ultimo mese"
-
-msgid "Total Page Views in the Last Month"
-msgstr "Visualizzazioni totali di pagine nell'ultimo mese"
-
-msgid "Number of Page Views per Visit"
-msgstr "Numero di visualizzazioni di pagine per visita"
-
-msgid "Average Visit Duration in Minutes"
-msgstr "Durata media della visita in minuti"
