Town6: Firebase bugfixes.
Fixes a number of issues OGC-2122, OGC-2120, OGC-2119, OGC-2109

- Fix an issue where news published only 1 min in the future was not sent
- Link to the `/push-notifications`
- Show hint in UI if message already sent and it won't send again
- Make deleting News with push notifications possible

TYPE: Bugfix

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -880,6 +880,11 @@ msgstr "Commentaire"
 msgid "Please provide at least one change"
 msgstr "Veuillez apporter au moins une modification"
 
+msgid ""
+"When using Firebase, publication start must be at least 5 minutes in the "
+"future"
+msgstr "Lorsque vous utilisez Firebase, le début de la publication doit se situer au moins 5 minutes dans le futur"
+
 msgid "Publication end must be in the future"
 msgstr "La fin de la publication doit être dans le futur"
 
@@ -4619,6 +4624,9 @@ msgstr "Notifications envoyées"
 msgid "Sent At"
 msgstr "Envoyé à"
 
+msgid "Response Data"
+msgstr "Response Data"
+
 msgid "No notifications"
 msgstr "Pas de notifications"
 
@@ -5818,6 +5826,12 @@ msgstr "${count} événements ont été importés"
 
 msgid "Move"
 msgstr "Déplacer"
+
+msgid ""
+"Notifications have already been sent for this news item. A new notification "
+"will not be sent, even if the publication date is changed."
+msgstr "Notifications ont déjà été envoyées pour cette nouvelle. Une nouvelle "
+"notification ne sera pas envoyée, même si la date de publication est modifiée."
 
 msgid "Your payment has been received"
 msgstr "Votre paiement a été reçu"
