--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -1722,6 +1722,9 @@ msgstr "Nouvelles"
 msgid "Sent At"
 msgstr "Envoyé à"
 
+msgid "Firebase Response Data"
+msgstr "Firebase Response Data"
+
 msgid "No notifications"
 msgstr "Pas de notifications"
 
@@ -2232,6 +2235,9 @@ msgid ""
 msgstr ""
 "Procédez avec prudence. Les billets et les données qu'ils contiennent "
 "peuvent être irrévocablement supprimés."
+
+msgid "Push Notification Overview"
+msgstr "Vue d'ensemble des notifications push"
 
 msgid "New Note"
 msgstr "Nouveau commentaire"
